# advanced_programming

./: .libraries.txt.swp  README.md  libraries.txt  lu  lu.cpp  main  main.cpp  transpose.cpp  transpose.hpp
Homework1/: SparseMatrix.cpp  SparseMatrix.hpp  main
Homework2_Alessio_Barrasso_Insaghi/: CMakeLists.txt  Dockerfile
Homework2_Alessio_Barrasso_Insaghi/src/: statsMod.cpp  statsMod.hpp
Homework2_Alessio_Barrasso_Insaghi/tests/: main.cpp
lecture1/: try  try.cpp
lecture10/ex1/: ex1  ex1.cpp
lecture10/ex2/: ex2  ex2.cpp
lecture10/ex3/: main  main.cpp  newton.cpp  newton.hpp
lecture12/ex1/: pi  pi.cpp
lecture12/ex2/: access  access.cpp
lecture12/ex3/: ex  ex.cpp
lecture2/: err  my_script.sh  my_script2.sh  some_commands.txt
lecture2/exercises/ex2/: solution.txt
lecture2/exercises/ex3/: backup.sh
lecture3/: essentials  essentials.cpp
lecture4/: my_module.cpp  notes.txt  script1  script1.cpp
lecture4/ex1/: temp_converter  temp_converter.cpp
lecture4/ex2/: memory  memory.cpp
lecture4/ex3/: main  main.cpp  statistics.cpp  statistics.hpp
lecture4/ex5/calculator/: build.sh  main
lecture4/ex5/calculator/include/: calculator.hpp
lecture4/ex5/calculator/src/: calculator.cpp  main.cpp
lecture5/: objects  objects.cpp
lecture6/Ex1/: DataProcessor  DataProcessor.cpp
lecture8/ex1/: autoDiff  autoDiff.cpp
lecture8/ex2/: exdata.cpp
newton/: main  main.cpp  newton.cpp  newton.hpp
